bumping spark 4.0.1